# blog-ejemplos

./: README.md
15-puzzle/: puzzle.pl
3-jugs/: puzzle.pl
alien/: alien.pl
automata_python/: automata.py
behave/: Pipfile
chr/: example1.pl  example2.pl  example3.pl
clojure-rpn/: execute.sh
curves/: main.pl
diesel-sample/: Cargo.toml  db.sqlite3
facebook-leak/: docker-compose.logstash.yml  docker-compose.yml  logstash-fb-spain.conf  main.py  pyproject.toml
facebook-leak/templates/: search.html
formulario-registro-elm/: build.sh  form.elm
fractal/: fractal2.py
functional-exercises/: exercises.clj  exercises.erl  exercises.hs  test_exercises.py
futuros/: Cargo.toml
gglog/: Cargo.toml  game.pl
gglog/src/: lib.rs
gtk_dice/: Cargo.toml
haskell-st/: Makefile  bubblesort.hs  sumar.hs
kanren-logpy/: Pipfile  list.py  socrates.py  tutorial.py
keyboard_input/: Cargo.toml
logtalk/: langs.lgt
mandelbrot-wgsl/: Cargo.toml
markov-hector-del-mar/: main.py
mercury/: aoc2021day1.m
morse/: morse.pl
moving/: moving.pl
prolog/: Makefile  hola.pl  lista.pl  restaurante.pl
prolog-sudoku/: sudoku.pl
prolog-web/: app.pl
python-yield/: coroutine.py
rl/: MDP.odg  programaciondinamica.ods  qlearn.py
scuba/: scuba.pl
serde_tutorial/: Cargo.toml  landmarks.json
shaders-wgsl/: Cargo.toml
snake/: Apple.cs  Node2D.tscn  Snake.cs  Snake.csproj  Snake.sln  SnakeBody.cs  project.godot
snips-nlu/: Pipfile  ask.py  dataset.json  localidad.txt  obtenerTiempo.txt  train.py  (+1 more)
z3/: basic.z3  equation.z3  pyproject.toml  reductio.z3  sudoku.py
(+33 files in other folders)
