[tool.poetry]
name = "facebook-leak"
version = "0.1.0"
description = ""
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
aiohttp = "^3.7.4"
uvicorn = "^0.13.4"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
