[package]
name = "gglog"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
swipl = "0.3.0"
raylib-sys = "3.5"