[tool.poetry]
name = "z3-test"
version = "0.1.0"
description = ""
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.8.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
